<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.pjb.sandbox</groupId>
    <artifactId>akka-cluster-sandbox</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>

    <name>Akka Cluster Sandbox</name>
    <description>Akka Cluster Sandbox</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <scala.short>2.11</scala.short>
        <scala.test.version>2.2.4</scala.test.version>
        <scala.version>2.11.5</scala.version>
        <maven.compiler.source>1.7</maven.compiler.source>
        <maven.compiler.target>1.7</maven.compiler.target>
        <maven.plugin.jar.version>2.4</maven.plugin.jar.version>
        <maven.plugin.war.version>2.4</maven.plugin.war.version>
        <maven.plugin.resources.version>2.5</maven.plugin.resources.version>
        <maven.plugin.compiler.version>2.5.1</maven.plugin.compiler.version>
        <maven.plugin.surefire.version>2.12</maven.plugin.surefire.version>
        <maven.plugin.dependency.version>2.4</maven.plugin.dependency.version>
        <maven.plugin.scala.version>3.1.6</maven.plugin.scala.version>
        <maven.plugin.scalatest.version>1.0-M2</maven.plugin.scalatest.version>
        <maven.plugin.release.version>2.3.2</maven.plugin.release.version>
        <junit.version>4.10</junit.version>
        <mockito.version>1.9.5</mockito.version>
        <sonar.scala.coveragePlugin>scoverage</sonar.scala.coveragePlugin>
        <sonar.host.url>http://172.18.48.170:9000</sonar.host.url>
        <sonar.language>scala</sonar.language>
        <skipTests>false</skipTests>
        <amqp-client.version>3.3.4</amqp-client.version>
        <akka.version>2.3.9</akka.version>
        <json4s-native_2.11.version>3.2.10</json4s-native_2.11.version>
    </properties>


    <dependencies>
        <!-- Avoid specifying scope here, that should be done in the submodules -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.0.1</version>
            <scope>provided</scope>
        </dependency>


        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.version}</version>
        </dependency>
        <dependency>
            <groupId>org.scala-lang.modules</groupId>
            <artifactId>scala-parser-combinators_2.11</artifactId>
            <version>1.0.3</version>
        </dependency>
        <dependency>
            <groupId>com.rabbitmq</groupId>
            <artifactId>amqp-client</artifactId>
            <version>3.2.4</version>
        </dependency>
        <dependency>
            <groupId>com.typesafe.akka</groupId>
            <artifactId>akka-actor_2.11</artifactId>
            <version>${akka.version}</version>
        </dependency>
        <dependency>
            <groupId>com.typesafe.akka</groupId>
            <artifactId>akka-slf4j_2.11</artifactId>
            <version>${akka.version}</version>
        </dependency>
        <dependency>
            <groupId>com.typesafe.akka</groupId>
            <artifactId>akka-cluster_2.11</artifactId>
            <version>${akka.version}</version>
        </dependency>
        <dependency>
            <groupId>com.typesafe.akka</groupId>
            <artifactId>akka-contrib_2.11</artifactId>
            <version>${akka.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.krasserm</groupId>
            <artifactId>akka-persistence-cassandra-12_2.11</artifactId>
            <version>0.3.4</version>
            <exclusions>
                <exclusion>
                    <groupId>javax.servlet</groupId>
                    <artifactId>servlet-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mortbay.jetty</groupId>
                    <artifactId>servlet-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.json4s</groupId>
            <artifactId>json4s-native_2.11</artifactId>
            <version>${json4s-native_2.11.version}</version>
        </dependency>

        <dependency>
            <groupId>io.spray</groupId>
            <artifactId>spray-servlet_2.11</artifactId>
            <version>1.3.2</version>
        </dependency>

        <dependency>
            <groupId>io.spray</groupId>
            <artifactId>spray-routing_2.11</artifactId>
            <version>1.3.2</version>
        </dependency>

        <dependency>
            <groupId>com.typesafe.scala-logging</groupId>
            <artifactId>scala-logging_2.11</artifactId>
            <version>3.1.0</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.1.2</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.1.2</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.5.1</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-scala_2.11</artifactId>
            <version>2.5.1</version>
        </dependency>


        <!-- Test dependencies, these should never be included outside of tests -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.10.19</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <scope>test</scope>
            <version>1.9</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest_2.11</artifactId>
            <version>2.2.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.scalactic</groupId>
            <artifactId>scalactic_2.11</artifactId>
            <version>2.2.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.typesafe.akka</groupId>
            <artifactId>akka-testkit_2.11</artifactId>
            <version>2.3.9</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.scoverage</groupId>
            <artifactId>scalac-scoverage-plugin_2.11</artifactId>
            <version>0.99.7</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.pegdown</groupId>
            <artifactId>pegdown</artifactId>
            <version>1.2.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>akka-sandbox</finalName>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>net.alchim31.maven</groupId>
                    <artifactId>scala-maven-plugin</artifactId>
                    <version>3.2.0</version>
                    <configuration>
                        <jvmArgs>
                            <jvmArg>-Xms64m</jvmArg>
                            <jvmArg>-Xmx1024m</jvmArg>
                        </jvmArgs>
                        <args>
                            <arg>-deprecation</arg>
                            <arg>-Xlint</arg>
                            <arg>-feature</arg>
                            <arg>-Yno-adapted-args</arg>
                            <arg>-Ywarn-dead-code</arg>
                            <arg>-Ywarn-infer-any</arg>
                            <arg>-Ywarn-unused-import</arg>
                        </args>
                    </configuration>
                    <executions>
                        <execution>
                            <id>compile</id>
                            <goals>
                                <goal>add-source</goal>
                                <goal>compile</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>test</id>
                            <goals>
                                <goal>add-source</goal>
                                <goal>testCompile</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven.plugin.jar.version}</version>
                </plugin>
                <!-- disable surefire -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.plugin.surefire.version}</version>
                    <configuration>
                        <skipTests>true</skipTests>
                    </configuration>
                </plugin>
                <!-- enable scalatest -->
                <plugin>
                    <groupId>org.scalatest</groupId>
                    <artifactId>scalatest-maven-plugin</artifactId>
                    <version>1.0</version>
                    <extensions>true</extensions>
                    <configuration>
                        <argLine>-XX:MaxPermSize=512m -Xmx1024m</argLine>
                        <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                        <junitxml>.</junitxml>
                        <filereports>WDF TestSuite.txt</filereports>
                        <htmlreporters>${project.build.directory}/html</htmlreporters>
                        <testFailureIgnore>false</testFailureIgnore>
                        <skipTests>${skipTests}</skipTests>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.scala-lang.modules</groupId>
                            <artifactId>scala-xml_2.11</artifactId>
                            <version>1.0.2</version>
                        </dependency>
                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.scalatest</groupId>
                <artifactId>scalatest-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <!-- Specifies the location and manner in which Maven may download remote artifacts for use by the current project -->
    <repositories>
        <!-- The Paddy Power Build Pipeline Maven repository (Artifactory). It can also act as a proxy for other repositories. -->
        <repository>
            <id>paddypower-artifacts</id>
            <name>release-candidates</name>
            <url>http://artifactory.cirrus.inhouse.paddypower.com:8081/artifactory/release-candidates</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>central</id>
            <name>libs-release</name>
            <url>http://artifactory.cirrus.inhouse.paddypower.com:8081/artifactory/libs-release</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>remote-repos</id>
            <name>remote-repos</name>
            <url>http://artifactory.cirrus.inhouse.paddypower.com:8081/artifactory/remote-repos</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>akka-cassandra-persistence</id>
            <name>akka-cassandra-persistence</name>
            <url>http://dl.bintray.com/krasserm/maven</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <name>plugins-release</name>
            <url>http://artifactory.cirrus.inhouse.paddypower.com:8081/artifactory/plugins-release</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>

        <pluginRepository>
            <id>snapshots</id>
            <name>plugins-snapshot</name>
            <url>http://artifactory.cirrus.inhouse.paddypower.com:8081/artifactory/plugins-snapshot</url>
            <snapshots/>
        </pluginRepository>
    </pluginRepositories>


</project>
